alignment fix

--- a/api/static/css/main.css
+++ b/api/static/css/main.css
@@ -13,10 +13,7 @@
     gap: 15px; /* Adjust spacing between buttons as needed */
 }
 
-.back-btn {
-    padding: 7px 15px;
-}
-
+.back-btn,
 .admin-btn,
 .settings-btn,
 .logout-btn {
@@ -27,17 +24,6 @@
     border: none; /* For the button */
     background: transparent; /* For the button, adjust as needed */
     cursor: pointer;
-}
-
-.back-btn span {
-    transform: translateY(-5px);
-    position: relative;
-}
-
-.svg-icon-message {
-    height: 18px;
-    width: 18px;
-    transform: translateY(3px);
 }
 
 .svg-icon {
@@ -335,75 +321,3 @@
 .dark-theme .message strong.username-highlight {
     color: rgb(63, 177, 253);
 }
-
-.codehilite {
-  background: #f8f8f8;
-  color: #000000;
-  padding: 0.5em;
-  border-radius: 3px;
-  font-family: monospace, monospace;
-  font-size: 0.9em;
-  overflow-x: auto;
-  white-space: pre;
-}
-
-.codehilite .c { color: #408080; font-style: italic } /* Comment */
-.codehilite .err { border: 1px solid #FF0000 } /* Error */
-.codehilite .k { color: #954121; font-weight: bold } /* Keyword */
-.codehilite .o { color: #666666 } /* Operator */
-.codehilite .cm { color: #408080; font-style: italic } /* Comment.Multiline */
-.codehilite .cp { color: #BC7A00 } /* Comment.Preproc */
-.codehilite .c1 { color: #408080; font-style: italic } /* Comment.Single */
-.codehilite .cs { color: #408080; font-style: italic } /* Comment.Special */
-.codehilite .gd { color: #A00000 } /* Generic.Deleted */
-.codehilite .ge { font-style: italic } /* Generic.Emph */
-.codehilite .gr { color: #FF0000 } /* Generic.Error */
-.codehilite .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.codehilite .gi { color: #00A000 } /* Generic.Inserted */
-.codehilite .go { color: #808080 } /* Generic.Output */
-.codehilite .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
-.codehilite .gs { font-weight: bold } /* Generic.Strong */
-.codehilite .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.codehilite .gt { color: #0044DD } /* Generic.Traceback */
-.codehilite .kc { color: #954121; font-weight: bold } /* Keyword.Constant */
-.codehilite .kd { color: #954121; font-weight: bold } /* Keyword.Declaration */
-.codehilite .kn { color: #954121; font-weight: bold } /* Keyword.Namespace */
-.codehilite .kp { color: #954121 } /* Keyword.Pseudo */
-.codehilite .kr { color: #954121; font-weight: bold } /* Keyword.Reserved */
-.codehilite .kt { color: #B00040 } /* Keyword.Type */
-.codehilite .m { color: #666666 } /* Literal.Number */
-.codehilite .s { color: #219161 } /* Literal.String */
-.codehilite .na { color: #7D9029 } /* Name.Attribute */
-.codehilite .nb { color: #954121 } /* Name.Builtin */
-.codehilite .nc { color: #0000FF; font-weight: bold } /* Name.Class */
-.codehilite .no { color: #880000 } /* Name.Constant */
-.codehilite .nd { color: #AA22FF } /* Name.Decorator */
-.codehilite .ni { color: #999999; font-weight: bold } /* Name.Entity */
-.codehilite .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-.codehilite .nf { color: #0000FF } /* Name.Function */
-.codehilite .nl { color: #A0A000 } /* Name.Label */
-.codehilite .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-.codehilite .nt { color: #954121; font-weight: bold } /* Name.Tag */
-.codehilite .nv { color: #19469D } /* Name.Variable */
-.codehilite .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
-.codehilite .w { color: #bbbbbb } /* Text.Whitespace */
-.codehilite .mf { color: #666666 } /* Literal.Number.Float */
-.codehilite .mh { color: #666666 } /* Literal.Number.Hex */
-.codehilite .mi { color: #666666 } /* Literal.Number.Integer */
-.codehilite .mo { color: #666666 } /* Literal.Number.Oct */
-.codehilite .sb { color: #219161 } /* Literal.String.Backtick */
-.codehilite .sc { color: #219161 } /* Literal.String.Char */
-.codehilite .sd { color: #219161; font-style: italic } /* Literal.String.Doc */
-.codehilite .s2 { color: #219161 } /* Literal.String.Double */
-.codehilite .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
-.codehilite .sh { color: #219161 } /* Literal.String.Heredoc */
-.codehilite .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
-.codehilite .sx { color: #954121 } /* Literal.String.Other */
-.codehilite .sr { color: #BB6688 } /* Literal.String.Regex */
-.codehilite .s1 { color: #219161 } /* Literal.String.Single */
-.codehilite .ss { color: #19469D } /* Literal.String.Symbol */
-.codehilite .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.codehilite .vc { color: #19469D } /* Name.Variable.Class */
-.codehilite .vg { color: #19469D } /* Name.Variable.Global */
-.codehilite .vi { color: #19469D } /* Name.Variable.Instance */
-.codehilite .il { color: #666666 } /* Literal.Number.Integer.Long */
